--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/ProductListView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/ProductListView.xaml
@@ -6,12 +6,11 @@
              xmlns:viewmodel="clr-namespace:HMQL_Project01_QuanLyBanHang.MVVM.ViewModel"
              xmlns:local="clr-namespace:HMQL_Project01_QuanLyBanHang.MVVM.View"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800" Loaded="Window_Loaded">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <viewmodel:ProductListViewModel />
     </UserControl.DataContext>
     <Grid>
-
         <Border Background="#FFF1F4FA"
                 CornerRadius="24" Grid.ColumnSpan="2" />
         <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.ColumnSpan="2">
