--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
@@ -58,7 +58,9 @@
             <DataTemplate DataType="{x:Type viewModel:OrderCreateViewModel}">
                 <view:OrderCreateView />
             </DataTemplate>
-
+            <DataTemplate DataType="{x:Type viewModel:OrderAddBookViewModel}">
+                <view:OrderAddBookView />
+            </DataTemplate>
             <DataTemplate DataType="{x:Type viewModel:CategoryManagementViewModel}">
                 <view:CategoryManagementView />
             </DataTemplate>
